Move the background color from the h2 to the content-header Remove 1px gap in the top of the header Fix edina/fieldtrip-gb#43

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -99,6 +99,13 @@
 #settings-page h2,
 #annotate-preview-page h2,
 #saved-records-page-header h2{
-    background: #2c3f62;
+    background: none !important;
     color: white;
+}
+
+#settings-page .content-header,
+#annotate-preview-page .content-header,
+#saved-records-page .content-header{
+    border-top-width: 0px;
+    background: #2c3f62;
 }
